More progress on UI. Implemented the dependency-detail-view template hooked up to selected dependency via rxjs service.
