# RepoRanger.Application/Projects/Queries/GetProjectsByRepositoryId/GetProjectsByRepositoryIdQueryValidator.cs
@@ -1,12 +1,0 @@
-﻿using FluentValidation;
-
-namespace RepoRanger.Application.Projects.Queries.GetProjectsByRepositoryId;
-
-internal sealed class GetProjectsByRepositoryIdQueryValidator : AbstractValidator<GetProjectsByRepositoryIdQuery>
-{
-    public GetProjectsByRepositoryIdQueryValidator()
-    {
-        RuleFor(q => q.RepositoryId)
-            .NotEmpty();
-    }
-}
