# RepoRanger.Application/Projects/Queries/GetProjectsByRepositoryIds/GetProjectsByRepositoryIdsQueryValidator.cs
@@ -1,0 +1,12 @@
+﻿using FluentValidation;
+
+namespace RepoRanger.Application.Projects.Queries.GetProjectsByRepositoryIds;
+
+internal sealed class GetProjectsByRepositoryIdsQueryValidator : AbstractValidator<GetProjectsByRepositoryIdsQuery>
+{
+    public GetProjectsByRepositoryIdsQueryValidator()
+    {
+        RuleFor(q => q.RepositoryIds)
+            .NotEmpty();
+    }
+}
