# RepoRanger.Application/Projects/ViewModels/ProjectVm.cs
@@ -6,4 +6,6 @@ public sealed class ProjectVm
     public string Name { get; init; }
     public string Version { get; init; }
     public int DependencyCount { get; init; }
+    public Guid RepositoryId { get; init; }
+    public string RepositoryName { get; init; }
 }
